// A quote service that allows users to add quotes, fetch them by ad and get a list of quotes added

syntax = "proto3";

option java_multiple_files = true;
option java_package       = "service";
option java_outer_classname = "QuoteProto";

package services;

import "google/protobuf/empty.proto";

service Quote {
  rpc addQuote(AddQuoteRequest) returns (AddQuoteResponse) {}
  rpc getQuote(GetQuoteRequest) returns (GetQuoteResponse) {}
  rpc listQuotes(google.protobuf.Empty) returns (ListQuotesResponse) {}
}

message AddQuoteRequest {
  string text = 1;
}

message AddQuoteResponse {
  bool success = 1;
  string error = 2;
  int32 id = 3;
}

message GetQuoteRequest {
  int32 id = 1;
}

message GetQuoteResponse {
  bool success = 1;
  string error = 2;
  string text = 3;
}

message ListQuotesResponse {
  repeated QuoteEntry quotes = 1;
}

message QuoteEntry {
  int32 id = 1;
  string text = 2;
}
